--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
 		"@internationalized/date": "^3.5.6",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.7.3",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.0",
+		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
@@ -30,27 +31,40 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"formsnap": "^1.0.1",
 		"globals": "^15.0.0",
-		"lucide-svelte": "^0.453.0",
+		"lucide-svelte": "^0.454.0",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.6",
+		"postcss": "^8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^5.1.3",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.19.1",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vaul-svelte": "^0.3.2",
-		"vite": "^5.0.3",
-		"vitest": "^2.0.0",
+		"vitest": "^2.1.4",
 		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/pro-duotone-svg-icons": "^6.5.2",
+		"@fortawesome/pro-light-svg-icons": "^6.5.2",
+		"@fortawesome/pro-regular-svg-icons": "^6.6.0",
+		"@fortawesome/pro-solid-svg-icons": "^6.6.0",
+		"@fortawesome/svelte-fontawesome": "^0.2.2",
+		"@types/node": "^22.7.9",
 		"marked": "^14.1.3",
-		"svelte-icons": "^2.1.0"
+		"svelte-icons": "^2.1.0",
+		"svelte-loader": "^3.2.4",
+		"tippy.js": "^6.3.7",
+		"vite": "^5.4.10",
+		"vite-plugin-node-polyfills": "^0.22.0"
 	}
 }
